--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="lib" path="libs/cafe.jar"/>
-	<classpathentry exported="true" kind="lib" path="E:/android-automation/CarwashC/CWashCarTest1.6.0/libs/adb4robotium_modified.jar"/>
+	<classpathentry exported="true" kind="lib" path="E:/android-automation/CarwashC/CWashCarTest1.7.0/libs/adb4robotium_modified1.7.0.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
