--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -18,6 +18,8 @@
         <uses-permission android:name = "android.permission.CAMERA" />
         <uses-feature android:name = "android.hardware.camera" />
         <uses-feature android:name = "android.hardware.camera" android:required = "false" />
+        <uses-permission android:name = "android.permission.ACCESS_FINE_LOCATION" />
+        
     </application>
     
     
